Add CRUD operations and views

--- a/SheinMagistracy/Views/Subject/Index.cshtml
+++ b/SheinMagistracy/Views/Subject/Index.cshtml
@@ -35,7 +35,7 @@
             }
         </tbody>
     </table>
-    <a asp-controller="Book" asp-action="Create" class="btn btn-primary">
+    <a asp-controller="Subject" asp-action="Create" class="btn btn-primary">
         Добавить предмет
     </a>
 </div>
