--- a/SheinMagistracy/Views/Subject/Delete.cshtml
+++ b/SheinMagistracy/Views/Subject/Delete.cshtml
@@ -12,12 +12,12 @@
         <input asp-for="Id" hidden />
         <div class="form-group">
             <label asp-for="SubjectName"></label>
-            <input asp-for="SubjectName" class="form-control" />
+            <input asp-for="SubjectName" disabled class="form-control" />
             <span asp-validation-for="SubjectName" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Teacher"></label>
-            <input asp-for="Teacher" class="form-control" />
+            <input asp-for="Teacher" disabled class="form-control" />
             <span asp-validation-for="Teacher" class="text-danger"></span>
         </div>
         <button type="submit" class="btn btn-danger" value="Delete">Удалить</button>
