--- a/SheinMagistracy/Views/Subject/Index.cshtml
+++ b/SheinMagistracy/Views/Subject/Index.cshtml
@@ -5,38 +5,46 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Предметотека</h1>
+    <h1 class="display-4">База предметов</h1>
     <p>Список предметов</p>
 </div>
 
 <div class="container">
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Предмет</th>
-                <th>Преподаватель</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
+    @if (Model.Count() > 0)
+    {
+        <table class="table">
+            <thead>
                 <tr>
-                    <td>@item.SubjectName</td>
-                    <td>@item.Teacher</td>
-                    <td>
-                        <a asp-controller="Subject" asp-route-Id="@item.Id" asp-action="Edit" class="btn btn-primary">
-                            Обновить
-                        </a>
-                        <a asp-controller="Subject" asp-route-Id="@item.Id" asp-action="Delete" class="btn btn-dark">
-                            Удалить
-                        </a>
-                    </td>
+                    <th>Предмет</th>
+                    <th>Преподаватель</th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@item.SubjectName</td>
+                        <td>@item.Teacher</td>
+                        <td>
+                            <a asp-controller="Subject" asp-route-Id="@item.Id" asp-action="Edit" class="btn btn-primary">
+                                Обновить
+                            </a>
+                            <a asp-controller="Subject" asp-route-Id="@item.Id" asp-action="Delete" class="btn btn-dark">
+                                Удалить
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+    else
+    {
+        <p> Список предметов пуст. </p>
+    }
     <a asp-controller="Subject" asp-action="Create" class="btn btn-primary">
-        Добавить предмет
-    </a>
+            Добавить предмет
+        </a>
+    
 </div>
 
