--- a/SheinMagistracy/Views/Subject/Index.cshtml
+++ b/SheinMagistracy/Views/Subject/Index.cshtml
@@ -45,6 +45,11 @@
     }
     else
     {
+        <div class="text-right">
+            <a asp-action="Create" class="btn btn-primary">
+                Добавить предмет
+            </a>
+        </div>
         <p> Список предметов пуст. </p>
     }
 </div>
